policy for room, booking, dashboard

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -19,7 +19,11 @@
 
             <tr>
               <td>
-               <%= link_to  room.name, dashboard_path(room) %>
+                <% if policy(room).show? %>
+                <%= link_to  room.name, dashboard_path(room) %>
+               <% else %>
+                <%= room.name %>
+               <% end %>
               
               </td>
 
