--- a/app/views/rooms/_room_form.html.erb
+++ b/app/views/rooms/_room_form.html.erb
@@ -1,7 +1,9 @@
  <%= simple_form_for @room do |f| %>
      <%= f.input :name, as: :string, required: true, label: "Property Name" %>
      <%= f.input :description, as: :text, required: true, placeholder: "Single room in quiet family home" %>
-     <%= f.input :price, as: :decimal, required: true, label: "Price (£)", placeholder: "25.50" %>
+ 
+  <%= f.input :price, as: :decimal, required: true, label: "Price (£)",  placeholder: "25.50", input_html: { value: number_with_precision(f.object.price, precision: 2) }  %>
+
      <%= f.input :street, as: :string, required: true %>
      <%= f.input :city, as: :string, required: true %>
      <%= f.input :guest_nr, as: :integer, required: true, label: "Number of Guests" %>
