--- a/app/views/rooms/_room_form.html.erb
+++ b/app/views/rooms/_room_form.html.erb
@@ -16,5 +16,7 @@
         <%= f.button :submit, "Add Room", class: "btn btn-primary" %>
       <% elsif controller_name == 'rooms' && action_name == 'edit' %>
         <%= f.button :submit, "Save Changes", class: "btn btn-primary" %>
+      <% else %>
+         <%= f.button :submit, "Submit", class: "btn btn-primary" %>
       <% end %>
     <% end %>
